--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^1.6.8",
+    "browserify-zlib": "^0.2.0",
     "http-proxy-middleware": "^1.0.5",
     "joi": "^17.2.1",
     "jwt-decode": "^4.0.0",
