--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^2.1.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
